+ initial DB setup
+ docker compose for DB
+ docker compose for DB testing
+ migrations setup
~ OpenAPI: change list query arguments (`name`, `surname`, `patronymic`)
  semantic to be similarity-search-related
+ OpenAPI: list query argument `threshold`
~ Go: refactore to pass linting
~ flake: make bin scripts independent of current working directory
~ flake: update
+ README: add sections `Docker`, `PostgreSQL`, `Go`
