# src/internal/api/server.gen.go
@@ -1,6 +1,6 @@
 // Package api provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/deepmap/oapi-codegen version v1.15.0 DO NOT EDIT.
+// Code generated by github.com/deepmap/oapi-codegen version v1.16.2 DO NOT EDIT.
 package api
 
 import (
@@ -107,6 +107,14 @@ func (siw *ServerInterfaceWrapper) PersonList(w http.ResponseWriter, r *http.Req
 	err = runtime.BindQueryParameter("form", true, false, "sex", r.URL.Query(), &params.Sex)
 	if err != nil {
 		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "sex", Err: err})
+		return
+	}
+
+	// ------------- Optional query parameter "threshold" -------------
+
+	err = runtime.BindQueryParameter("form", true, false, "threshold", r.URL.Query(), &params.Threshold)
+	if err != nil {
+		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "threshold", Err: err})
 		return
 	}
 
